
[metadata]
name = smipyping
version = 0.7.0
summary = A pure Python client for SNIA SMI test support.
description-file =
    README.rst
license = Apache License, Version 2.0
author = Karl Schopmeyer
author-email = k.schopmeyer@swbell.net
maintainer = Karl Schopmeyer
maintainer-email = k.schopmeyer@swbell.net
home-page = https://github.com/KSchopmeyer/smipypin
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    smipyping
    smicli
scripts =
    tools/pysendmail

[entry_points]
console_scripts =
    smicli = smicli.smicli:cli

[wheel]
universal = 1

[pbr]
warnerrors = true

[flake8]
ignore =
    # unable to detect undefined names (when using wildcard import)
    F403
exclude =
    .git,
    .tox,
    __pycache__,
    *.pyc,
    docs/conf.py,
    build_doc,
    dist
